--- a/Activity2-TributePage/about.html
+++ b/Activity2-TributePage/about.html
@@ -42,7 +42,7 @@
     <div id="main">
 
     <div id="img-div">
-        <img id="image" src="C:\Users\Windows 10 PRO\AvionSchool\MyAvionProjects\BILLY PICS.png"style="width:100%";>
+        <img id="image" src="C:\Users\Windows 10 PRO\AvionSchool\MyAvionProjects\Activity2-TributePage\images\BILLY PICS.png"style="width:100%";>
     </div>
     <h1 id="title" style="font-size: 5vw;">About Him
         <p>William Franklin Graham Jr.<em>'Billy Graham'</em>  was an American evangelist, a prominent evangelical <br>
@@ -61,7 +61,7 @@
     </h1>
     
 </div>
-    <img id="pic" src="C:\Users\Windows 10 PRO\AvionSchool\MyAvionProjects\billygraham.png" style="width:50%" "float:left" class="center"; >
+    <img id="pic" src="C:\Users\Windows 10 PRO\AvionSchool\MyAvionProjects\Activity2-TributePage\images\billygraham.png" style="width:50%" "float:left" class="center"; >
 
 
 </body>
